--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,7 +21,8 @@ services:
         image: grafana/grafana:11.2.1
         container_name: "grafana"
         volumes:
-            - ./grafana/datasources.yaml:/etc/grafana/provisioning/datasources/datasources.yaml
+            - ./grafana/dashboards:/etc/grafana/provisioning/dashboards
+            - ./grafana/datasources/datasources.yaml:/etc/grafana/provisioning/datasources/datasources.yaml
         ports:
             - "3000:3000"
         environment:
@@ -36,7 +37,7 @@ services:
             - public
 
     rabbitmq:
-        image: "rabbitmq:3-management"
+        image: "rabbitmq:4.0.2-management-alpine"
         container_name: "rabbitmq"
         ports:
             - "5672:5672"
